hw3/decafexpr/output/dev/llvm/intcallcalleeexpr.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/intcallcalleeexpr.llvm:7:23: error: use of undefined value '%a'
  %1 = load i32, i32* %a
                      ^
